--- a/wxApp/wxs/in.wxs
+++ b/wxApp/wxs/in.wxs
@@ -1,4 +1,5 @@
 var inString = function(a,string){
+    console.log(string)
    return a && string && string.indexOf(a) > -1
 }
 var inArray = function(a,arr){
