--- a/wxApp/pages/order/info.wxml
+++ b/wxApp/pages/order/info.wxml
@@ -1,3 +1,35 @@
 <view class="page">
-
+    <view class="weui-form-preview">
+        <view class="weui-form-preview__hd">
+            <view class="weui-form-preview__item">
+                <view class="weui-form-preview__label">付款金额</view>
+                <view class="weui-form-preview__value_in-hd" wx:if="{{info.price >= 0}}">¥{{info.price / 100}}</view>
+            </view>
+        </view>
+        <view class="weui-form-preview__bd">
+            <view class="weui-form-preview__item">
+                <view class="weui-form-preview__label">商品</view>
+                <view class="weui-form-preview__value">{{info.title}}</view>
+            </view>
+            <view class="weui-form-preview__item">
+                <view class="weui-form-preview__label">订单号</view>
+                <view class="weui-form-preview__value">{{info.out_trade_no}}</view>
+            </view>
+            <view class="weui-form-preview__item" wx:if="{{info.trade_no}}">
+                <view class="weui-form-preview__label">微信流水号</view>
+                <view class="weui-form-preview__value">{{info.trade_no}}</view>
+            </view>
+            <view class="weui-form-preview__item">
+                <view class="weui-form-preview__label">下单时间</view>
+                <view class="weui-form-preview__value">{{info.created_at}}</view>
+            </view>
+            <view class="weui-form-preview__item" wx:if="{{info.pay_at}}">
+                <view class="weui-form-preview__label">支付时间</view>
+                <view class="weui-form-preview__value">{{info.pay_at}}</view>
+            </view>
+        </view>
+        <view class="weui-form-preview__ft">
+            <button class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">确认支付({{}})</button>
+        </view>
+    </view>
 </view>
