--- a/wxApp/pages/order/record.wxml
+++ b/wxApp/pages/order/record.wxml
@@ -1,14 +1,39 @@
 <view class="page">
     <view class="list">
-        <wxs src="./../../wxs/countDown.wxs" module="countDown"/>
+        <wxs src="./../../wxs/countDown.wxs" module="tools"/>
         <view class="weui-panel" bindtap="order" data-oid="{{item.oid}}" wx:for="{{list}}" wx:key="list-key">
             <view class="weui-panel__bd">
                 <view class="weui-media-box weui-media-box_appmsg">
+                    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg" wx:if="{{item.cover}}">
+                        <image class="weui-media-box__thumb" src="{{domain+item.cover}}"/>
+                    </view>
                     <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
                         <view class="weui-media-box__title">
+                            <view class="weui-flex">
+                                <view class="weui-flex__item-auto">{{item.title}}</view>
+                                <view class="weui-flex__item-auto">¥ {{item.price/100}}</view>
+                            </view>
                         </view>
                         <view class="weui-media-box__desc">
+                            <text wx:if="{{item.trade_no}}">微信流水号{{item.trade_no}}</text>
+                            <text wx:else>商户订单号{{item.out_trade_no}}</text>
                         </view>
+                        <view class="weui-media-box__info">
+                            <view class="weui-flex">
+                                <view class="weui-flex__item-auto" wx:if="{{item.pay_at}}">{{item.pay_at}}</view>
+                                <view class="weui-flex__item-auto" wx:else>{{item.created_at}}</view>
+                            </view>
+                        </view>
+                    </view>
+                    <view class="status">
+                        <view class="weui-flex__item-auto text-orange text"
+                              wx:if="{{item.status == 0 || item.status == 1 || item.status == 10}}">
+                            {{tools.secToMinStr(item.expire_at,nowTime)}}
+                        </view>
+                        <view class="weui-flex__item-auto text-orange text" wx:elif="{{item.status == 11}}">正在验证支付</view>
+                        <view class="weui-flex__item-auto text-green text" wx:elif="{{item.status == 20}}">已支付</view>
+                        <view class="weui-flex__item-auto text-red text" wx:elif="{{item.status == 30}}">已退款</view>
+                        <view class="weui-flex__item-auto text-grey text" wx:elif="{{item.status == 101}}">已取消</view>
                     </view>
                 </view>
             </view>
