--- a/wxApp/wxs/countDown.wxs
+++ b/wxApp/wxs/countDown.wxs
@@ -14,6 +14,20 @@ var formatSecondStr = function (s,now) {
     str += PrefixInteger(second)
     return str
 }
+
+var secToMinStr = function (s,now) {
+    s = s - now
+    if (s <= 0)
+        return "00:00"
+    var min = Math.floor(s / 60) % 60,
+        second = Math.floor(s % 60),
+        str = ""
+    str += PrefixInteger(min) + " : "
+    str += PrefixInteger(second)
+    return str
+}
+
+
 var PrefixInteger =  function(num){
     if(num == 0)
         return "00";
@@ -21,5 +35,6 @@ var PrefixInteger =  function(num){
 }
 
 module.exports = {
-    formatSecondStr: formatSecondStr
+    formatSecondStr: formatSecondStr,
+    secToMinStr: secToMinStr
 }
