--- a/wxApp/pages/question/index.wxml
+++ b/wxApp/pages/question/index.wxml
@@ -7,14 +7,14 @@
                 <image class="icon" src="{{domain}}wxApp/lianxi.png"/>
                 <view class="text-m a-c">全真练习</view>
             </view>
-            <picker class="weui-flex__item" bindchange="exam" range="{{typesData}}" range-key="name">
+            <picker class="weui-flex__item" bindchange="exam" range="{{typesData}}" range-key="name" disabled="{{!type.on}}">
                 <image class="icon" src="{{domain}}wxApp/mokao.png"/>
                 <view class="text-m a-c">全真模考</view>
             </picker>
         </view>
     </view>
     <view class="prices" wx:if="{{!type.on}}">
-        <view class="a-c text-m title">购买习题</view>
+        <view class="a-c text-m title">购买题库</view>
         <view class="list">
             <view class="weui-panel">
                 <view class="weui-panel__bd">
