--- a/wxApp/pages/order/info.wxml
+++ b/wxApp/pages/order/info.wxml
@@ -41,13 +41,13 @@
             </form>
         </view>
         <view class="weui-form-preview__ft" wx:elif="{{info.status == 20}}">
-            订单已支付
+            <view class="weui-form-preview__btn weui-form-preview__btn_primary">订单已支付</view>
         </view>
         <view class="weui-form-preview__ft" wx:elif="{{info.status == 30}}">
-            订单已退款
+            <view class="weui-form-preview__btn weui-form-preview__btn_primary">订单已退款</view>
         </view>
         <view class="weui-form-preview__ft" wx:elif="{{info.status == 101}}">
-            订单已取消
+            <view class="weui-form-preview__btn weui-form-preview__btn_primary">订单已取消</view>
         </view>
     </view>
 </view>
