--- a/wxApp/pages/order/info.wxml
+++ b/wxApp/pages/order/info.wxml
@@ -35,9 +35,9 @@
                 <button classs="button text-white" type="primary" form-type="submit">确认支付({{tools.secToMinStr(info.expire_at,nowTime)}})</button>
             </form>
         </view>
-        <view class="weui-form-preview__ft" wx:elif="{{info.status == 11}}">
+        <view class="weui-form-preview__ft" wx:elif="{{info.status == 11 || ((info.status == 1 || info.status == 10 ) && info.expire_at < nowTime)}}">
             <form bindsubmit="query" report-submit="{{true}}">
-                <button classs="button" type="primary" plain="{{true}}" loading="{{true}}">查询支付结果中</button>
+                <button classs="button" type="primary" plain="{{true}}" loading="{{true}}" form-type="submit">查询支付结果中</button>
             </form>
         </view>
         <view class="weui-form-preview__ft" wx:elif="{{info.status == 20}}">
