--- a/wxApp/pages/order/info.wxml
+++ b/wxApp/pages/order/info.wxml
@@ -30,12 +30,12 @@
             </view>
         </view>
         <view class="weui-form-preview__ft"
-              wx:if="{{ (info.status == 1 || info.status == 10 ) && info.expire_at >= nowTime}}">
+              wx:if="{{ (info.status == 1 || info.status == 10 ) && info.expire_at > nowTime}}">
             <form bindsubmit="goPay" report-submit="{{true}}">
                 <button classs="button text-white" type="primary" form-type="submit">确认支付({{tools.secToMinStr(info.expire_at,nowTime)}})</button>
             </form>
         </view>
-        <view class="weui-form-preview__ft" wx:elif="{{info.status == 11 || ((info.status == 1 || info.status == 10 ) && info.expire_at < nowTime)}}">
+        <view class="weui-form-preview__ft" wx:elif="{{info.status == 11 || ((info.status == 1 || info.status == 10 ) && info.expire_at <= nowTime)}}">
             <form bindsubmit="query" report-submit="{{true}}">
                 <button classs="button" type="primary" plain="{{true}}" loading="{{true}}" form-type="submit">查询支付结果中</button>
             </form>
