--- a/wxApp/pages/home/home.wxml
+++ b/wxApp/pages/home/home.wxml
@@ -9,7 +9,7 @@
     </view>
 
     <view class="weui-cells weui-cells_after-title school">
-        <view class="weui-cell weui-cell_access">领图学院</view>
+        <view class="weui-cell weui-cell_access">领途学院</view>
         <view class="weui-cell">
             <view class="weui-cell__hd" wx:if="{{domain}}">
                 <video class="video" id="video" src="{{domain}}help.mp4" poster="" bindplay="play"/>
