--- a/wxApp/pages/home/home.wxml
+++ b/wxApp/pages/home/home.wxml
@@ -10,9 +10,9 @@
 
     <view class="weui-cells weui-cells_after-title school">
         <view class="weui-cell weui-cell_access">领途学院</view>
-        <view class="weui-cell">
+        <view class="weui-cell" bindtap="play">
             <view class="weui-cell__hd" wx:if="{{domain}}">
-                <video class="video" id="video" src="{{domain}}help.mp4" poster="" bindplay="play"/>
+                <video class="video " id="video" src="{{domain}}help.mp4" poster="" direction="0" show-center-play-btn="{{false}}" bindplay="play" bindfullscreenchange="exitPlay"/>
             </view>
             <view class="weui-cell__bd">
                 <view>考试教程</view>
