--- a/wxApp/pages/common/note.wxml
+++ b/wxApp/pages/common/note.wxml
@@ -27,28 +27,28 @@
 
         <view class="weui-article__title">3、领途网用户帐号注册规则</view>
         <view class="weui-article__section">
-            <view class="weui-article__p">（1）帐号注册资料包括但不限于用户提交录入的邮箱帐号、手机号码、密码、注册或更新领途网帐号时输入的所有信息以及用户使用领途网各单项服务时输入、提供的所有信息。
+            <view class="weui-article__p">帐号注册资料包括但不限于用户提交录入的邮箱帐号、手机号码、密码、注册或更新领途网帐号时输入的所有信息以及用户使用领途网各单项服务时输入、提供的所有信息。
             </view>
-            <view class="weui-article__p">（2）用户在注册领途网帐号时承诺遵守法律法规、国家利益、公民合法权益、公共秩序、社会主义道德和信息真实性等原则，不得在领途网帐号注册资料中出现违法和不良信息，且用户保证其在注册和使用帐号时，不得有以下情形：
+            <view class="weui-article__p">用户在注册领途网帐号时承诺遵守法律法规、国家利益、公民合法权益、公共秩序、社会主义道德和信息真实性等原则，不得在领途网帐号注册资料中出现违法和不良信息，且用户保证其在注册和使用帐号时，不得有以下情形：
                 <view class="weui-article__p">
-                    <view>1)违反宪法或法律法规规定的；</view>
-                    <view>2)危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；</view>
-                    <view>3)损害国家荣誉和利益的，损害公共利益的；</view>
-                    <view>4)煽动民族仇恨、民族歧视，破坏民族团结的；</view>
-                    <view>5)破坏国家宗教政策，宣扬邪教和封建迷信的；</view>
-                    <view>6)散布谣言，扰乱社会秩序，破坏社会稳定的；</view>
-                    <view>7)散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；</view>
-                    <view>8)侮辱或者诽谤他人，侵害他人合法权益的；</view>
-                    <view>9)含有法律、行政法规禁止的其他内容的。</view>
+                    <view>1）违反宪法或法律法规规定的；</view>
+                    <view>2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；</view>
+                    <view>3）损害国家荣誉和利益的，损害公共利益的；</view>
+                    <view>4）煽动民族仇恨、民族歧视，破坏民族团结的；</view>
+                    <view>5）破坏国家宗教政策，宣扬邪教和封建迷信的；</view>
+                    <view>6）散布谣言，扰乱社会秩序，破坏社会稳定的；</view>
+                    <view>7）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；</view>
+                    <view>8）侮辱或者诽谤他人，侵害他人合法权益的；</view>
+                    <view>9）含有法律、行政法规禁止的其他内容的。</view>
                 </view>
             </view>
-            <view class="weui-article__p">（3）您同意遵守中华人民共和国相关法律法规的所有规定，并对以任何通过您的密码和您的帐号来使用领途网服务的任何行为及其结果承担全部责任。如您的行为违反国家法律和法规的任何规定，有可能构成违法犯罪的，您将被追究法律责任，同时本公司亦有权不经任何事先通知而暂停、或终止向您提供服务。
+            <view class="weui-article__p">您同意遵守中华人民共和国相关法律法规的所有规定，并对以任何通过您的密码和您的帐号来使用领途网服务的任何行为及其结果承担全部责任。如您的行为违反国家法律和法规的任何规定，有可能构成违法犯罪的，您将被追究法律责任，同时本公司亦有权不经任何事先通知而暂停、或终止向您提供服务。
             </view>
-            <view class="weui-article__p">（4）用户同意，其提供的真实、准确、合法的领途网帐号注册资料是作为认定用户个体与其领途网帐号的关联性以及用户身份确认的唯一证据。本公司提醒用户，用户注册领途网帐号或更新注册信息时所填写的相关内容，在注册领途网帐号成功或补充填写成功后若再行修改的，本公司出于安全考虑将设置相关的修改程序，因此请用户慎重填写提交各类注册信息。若本公司有合理理由怀疑您提交的相关资料或信息属于恶意程序或恶意操作，则本公司有权暂停或终止向您的帐号提供服务，并有权拒绝您于现在和将来使用本公司所提供服务之全部或任何部分。
+            <view class="weui-article__p">用户同意，其提供的真实、准确、合法的领途网帐号注册资料是作为认定用户个体与其领途网帐号的关联性以及用户身份确认的唯一证据。本公司提醒用户，用户注册领途网帐号或更新注册信息时所填写的相关内容，在注册领途网帐号成功或补充填写成功后若再行修改的，本公司出于安全考虑将设置相关的修改程序，因此请用户慎重填写提交各类注册信息。若本公司有合理理由怀疑您提交的相关资料或信息属于恶意程序或恶意操作，则本公司有权暂停或终止向您的帐号提供服务，并有权拒绝您于现在和将来使用本公司所提供服务之全部或任何部分。
             </view>
-            <view class="weui-article__p">（5）为使用户及时、全面了解本公司提供的各项服务，用户同意，本公司可以多次、长期向用户发送各类商业性短信息、邮件而无需另行获得用户的特别同意。
+            <view class="weui-article__p">为使用户及时、全面了解本公司提供的各项服务，用户同意，本公司可以多次、长期向用户发送各类商业性短信息、邮件而无需另行获得用户的特别同意。
             </view>
-            <view class="weui-article__p">（6）用户同意与注册、使用领途网帐号相关的一切资料、数据和记录，包括但不限于领途网帐号、注册资料、所有登录和操作记录和相关的使用统计数字、产品客户服务记录等归常州领途教育信息咨询有限公司所有。发生争议时，用户同意以常州领途教育信息咨询有限公司的系统数据为准，常州领途教育信息咨询有限公司保证该数据的真实性。
+            <view class="weui-article__p">用户同意与注册、使用领途网帐号相关的一切资料、数据和记录，包括但不限于领途网帐号、注册资料、所有登录和操作记录和相关的使用统计数字、产品客户服务记录等归常州领途教育信息咨询有限公司所有。发生争议时，用户同意以常州领途教育信息咨询有限公司的系统数据为准，常州领途教育信息咨询有限公司保证该数据的真实性。
             </view>
         </view>
         <view class="weui-article__title">4、帐号、密码及相关安全注意事项</view>
@@ -59,8 +59,8 @@
             <view class="weui-article__p">
                 您应对您所有通过帐号及密码所做的操作、所进行的活动负完全的责任。您同意：
                 <view class="weui-article__p">
-                    <view>（1）一旦发现您的领途网帐号遭到未获授权的使用，或者发生其它任何安全问题时，您将立即通知领途网；</view>
-                    <view>（2）一旦领途网发现您的帐号存在异常状况的(包括但不限于异地登陆、IP地址异常变动、发送注册信息变更请求等)，则领途网有权依据其合理判断采取相应措施(包括但不限于要求用户进行实名认证等)以保护用户帐号安全；
+                    <view>1）一旦发现您的领途网帐号遭到未获授权的使用，或者发生其它任何安全问题时，您将立即通知领途网；</view>
+                    <view>2）一旦领途网发现您的帐号存在异常状况的(包括但不限于异地登陆、IP地址异常变动、发送注册信息变更请求等)，则领途网有权依据其合理判断采取相应措施(包括但不限于要求用户进行实名认证等)以保护用户帐号安全；
                     </view>
                     <view>若您未保管好自己的帐号和密码，因此而产生的任何损失或损害，领途网不应承担任何责任；因此对您、领途网或其他第三方造成任何损害的，将由您负全部责任。</view>
                 </view>
@@ -90,14 +90,14 @@
             <view class="weui-article__p">
                 领途网基于自身的经营自主权，自主决定向用户提供丰富的服务项目供用户选择，用户可根据自身实际需求决定选择免费服务项目或是有偿、付费服务项目。针对有偿服务项目，用户请注意下述特别事项：
             </view>
-            <view class="weui-article__p">（1）购买：您可通过本公司官网或其他经本公司授权之第三方销售渠道订购领途网产品、服务，并完成费用支付。根据您所订购产品的具体信息(以订购当时领途网官网公示为准)，包括但不限于课程内容、课程安排、价格、退款政策等，在您支付完成后将由领途网系统后台生成1份电子订单，该电子订单系本协议之有效组成部分，是确定用户与领途网各自权利义务的有效依据。支付完成后您即可根据所购买课程享受领途网提供的各项服务。领途网针对部分课程，可能会需要向您邮寄提供教材、讲义等课程资料，因此请您在提交订单前务必仔细核对收货人、收货地址及联系电话等信息。收货人与用户本人不一致的，收货人的行为和意思表示即视为用户的行为和意思表示，用户应对收货人的行为及意思表示的法律后果承担连带责任。
+            <view class="weui-article__p">1）购买：您可通过本公司官网或其他经本公司授权之第三方销售渠道订购领途网产品、服务，并完成费用支付。根据您所订购产品的具体信息(以订购当时领途网官网公示为准)，包括但不限于课程内容、课程安排、价格、退款政策等，在您支付完成后将由领途网系统后台生成1份电子订单，该电子订单系本协议之有效组成部分，是确定用户与领途网各自权利义务的有效依据。支付完成后您即可根据所购买课程享受领途网提供的各项服务。领途网针对部分课程，可能会需要向您邮寄提供教材、讲义等课程资料，因此请您在提交订单前务必仔细核对收货人、收货地址及联系电话等信息。收货人与用户本人不一致的，收货人的行为和意思表示即视为用户的行为和意思表示，用户应对收货人的行为及意思表示的法律后果承担连带责任。
             </view>
-            <view class="weui-article__p">（2）服务、产品的提供：本公司针对不同的课程产品分别设置有其对应的质保期，质保期自用户完成该课程产品的支付之时起算。用户所购买课程结课后，本公司在质保期内有权(但无义务)向其提供其他辅助服务或产品以丰富用户体验，辅助服务或产品相关信息请见具体课程说明或介绍。
+            <view class="weui-article__p">2）服务、产品的提供：本公司针对不同的课程产品分别设置有其对应的质保期，质保期自用户完成该课程产品的支付之时起算。用户所购买课程结课后，本公司在质保期内有权(但无义务)向其提供其他辅助服务或产品以丰富用户体验，辅助服务或产品相关信息请见具体课程说明或介绍。
             </view>
             <view class="weui-article__p">
                 一个帐号只能由一个用户使用，不允许多个用户使用同一个帐号，若本公司有合理理由认为可能存在用户帐号被盗取、被盗用情形的，则本公司有权将此帐号暂时或永久作无效处理并保留追究法律责任的权利。用户将帐号借给他人使用的，用户应承担由此产生的全部责任，并与实际使用人承担连带责任。用户在享受直播课程服务过程中，应自觉维护直播课堂秩序，不得作出、参与任何影响课堂正常秩序的行为。
             </view>
-            <view class="weui-article__p">（3）退款：基于各单项服务的特点，领途网针对不同的单项服务制定了相应的退款规则，具体以用户订购当时领途网官网所公示的各项服务之退款服务规则和条件为准。请您在订购前务必仔细阅读并保证已充分了解了拟订购服务的退款条件及规则，一旦提交订购请求的、即视为您已经完全了解并同意该退款规则。
+            <view class="weui-article__p">3）退款：基于各单项服务的特点，领途网针对不同的单项服务制定了相应的退款规则，具体以用户订购当时领途网官网所公示的各项服务之退款服务规则和条件为准。请您在订购前务必仔细阅读并保证已充分了解了拟订购服务的退款条件及规则，一旦提交订购请求的、即视为您已经完全了解并同意该退款规则。
             </view>
         </view>
 
@@ -114,19 +114,19 @@
             <view class="weui-article__p">
                 为更好的服务用户，领途网开设有求职帮助频道以发布相关招聘岗位信息，同时亦允许用户进行简历发布及简历投递等相关操作。用户明确知悉并同意：
             </view>
-            <view class="weui-article__p">（1）如任何一方不履行或迟延履行本协议规定的义务是由于不可抗力引发，则该方免除承担违约责任；
+            <view class="weui-article__p">1）如任何一方不履行或迟延履行本协议规定的义务是由于不可抗力引发，则该方免除承担违约责任；
                 <view class="weui-article__p">
-                    <view>A)发布信息(包括通过简历或求职频道其他功能模块发布，下同)的完整性、真实性、准确性、及时有效性存在任何瑕疵；</view>
-                    <view>B)发布信息与用户个人身份信息之间的指向存在不确定性、非唯一性；</view>
-                    <view>C)发布信息不符合简历性质、特征或求职意向不明，或存在商业营销推广信息；</view>
-                    <view>D)发布信息涉嫌侵犯第三方合法权利；</view>
-                    <view>E)领途网根据实际情况酌情判定不适宜发布、展现的其他信息。</view>
+                    <view>A）发布信息(包括通过简历或求职频道其他功能模块发布，下同)的完整性、真实性、准确性、及时有效性存在任何瑕疵；</view>
+                    <view>B）发布信息与用户个人身份信息之间的指向存在不确定性、非唯一性；</view>
+                    <view>C）发布信息不符合简历性质、特征或求职意向不明，或存在商业营销推广信息；</view>
+                    <view>D）发布信息涉嫌侵犯第三方合法权利；</view>
+                    <view>E）领途网根据实际情况酌情判定不适宜发布、展现的其他信息。</view>
                 </view>
                 用户违反上述保证、发布信息存在以上任一情形的，领途网有权对用户所发布信息、用户账号做任何必要之处置(包括但不限于违规信息删除、下线、账号暂停使用或永久封禁等)。因此造成任何其他不利后果的(如被用人单位不予录用或录用后解除劳动关系等)，由用户自行承担；给领途网造成任何损失或损害的，领途网亦有权追究其相应法律责任。
             </view>
-            <view class="weui-article__p">（2）用户明确知悉并了解，领途网作为信息发布平台，仅对其根据用户(包括求职者和用人单位)上传至其运营平台并要求发布的信息做形式和技术层面的审核以保证能顺利发布上线，不会、也没有能力针对海量信息内容本身做实质性审查、内容修改或指导等，因此不对所发布登载信息的真实性、完整性、准确性、及时有效性做任何担保、保证，也不对信息发布后是否能成功实现发布者的意愿和目的做任何承诺、担保、保证，请用户谨慎判断、辨别相关信息并作出决策。用户在通过领途网得到资讯和信息后，与信息发布方所进行的任何活动(包括联系、沟通、面试、谈判、入职、建立劳动关系等)均系双方依据各自独立意志所开展，双方之间如发生任何纠纷的，皆与领途网无关，领途网不承担任何责任。
+            <view class="weui-article__p">2）用户明确知悉并了解，领途网作为信息发布平台，仅对其根据用户(包括求职者和用人单位)上传至其运营平台并要求发布的信息做形式和技术层面的审核以保证能顺利发布上线，不会、也没有能力针对海量信息内容本身做实质性审查、内容修改或指导等，因此不对所发布登载信息的真实性、完整性、准确性、及时有效性做任何担保、保证，也不对信息发布后是否能成功实现发布者的意愿和目的做任何承诺、担保、保证，请用户谨慎判断、辨别相关信息并作出决策。用户在通过领途网得到资讯和信息后，与信息发布方所进行的任何活动(包括联系、沟通、面试、谈判、入职、建立劳动关系等)均系双方依据各自独立意志所开展，双方之间如发生任何纠纷的，皆与领途网无关，领途网不承担任何责任。
             </view>
-            <view class="weui-article__p">（3）用户明确知悉并确认同意：为向用户提供更为丰富完善的服务、提升用户求职成功率，领途网有权收集和使用(包括向招聘单位提供)用户在使用本网站服务的过程中发布、留存的相关信息、产生的数据、使用痕迹等各类信息，包括但不限于用户创建发布简历过程中提供的信息、用户活跃度、用户在领途网接受培训进行学习的情况等。
+            <view class="weui-article__p">3）用户明确知悉并确认同意：为向用户提供更为丰富完善的服务、提升用户求职成功率，领途网有权收集和使用(包括向招聘单位提供)用户在使用本网站服务的过程中发布、留存的相关信息、产生的数据、使用痕迹等各类信息，包括但不限于用户创建发布简历过程中提供的信息、用户活跃度、用户在领途网接受培训进行学习的情况等。
             </view>
         </view>
 
@@ -135,9 +135,9 @@
             <view class="weui-article__p">
                 “不可抗力”指超出本协议双方控制范围，无法预见、无法避免且无法克服、使得本协议任一方部分或者全部不能履行本协议的事件。这类事件包括但不限于地震、台风、洪水、火灾、战争、罢工、暴动、网络中断、政府行为、法律规定或其适用规则的变化、政策调整或变化(包括但不限于考试取消、暂停、举办时间变化等)，或者其他任何无法预见、避免或者控制的事件。
             </view>
-            <view class="weui-article__p">（1）如任何一方不履行或迟延履行本协议规定的义务是由于不可抗力引发，则该方免除承担违约责任；
+            <view class="weui-article__p">1）如任何一方不履行或迟延履行本协议规定的义务是由于不可抗力引发，则该方免除承担违约责任；
             </view>
-            <view class="weui-article__p">（2）不可抗力事由发生后，若有可能，受不可抗力影响的一方应在合理时间内将有关情况及时通知对方（甲方可以通过网站公告、论坛或即时通讯工具通知、一对一联系的方式通知乙方）。
+            <view class="weui-article__p">2）不可抗力事由发生后，若有可能，受不可抗力影响的一方应在合理时间内将有关情况及时通知对方（甲方可以通过网站公告、论坛或即时通讯工具通知、一对一联系的方式通知乙方）。
             </view>
             <view class="weui-article__p">
                 不可抗力因素消除后，曾受不可抗力影响而未能履约的一方应尽最大努力恢复履行其在本协议项下的义务。
@@ -146,13 +146,13 @@
 
         <view class="weui-article__title">10、其他</view>
         <view class="weui-article__section">
-            <view class="weui-article__p">（1）领途网有随时调整各项服务费用收取标准的权利(已完成支付的订单不受影响)；</view>
-            <view class="weui-article__p">（2）由于考试大纲变化、师资变动等原因，领途网有调整培训内容、授课老师的权利；</view>
-            <view class="weui-article__p">（3）基于实际情况变化，领途网有调整课程设置的权利，也有调整服务提供流程的权利(包括但不限于退课、换课、赠课流程等)；</view>
-            <view class="weui-article__p">（4）若您选择第三方支付平台等方式进行费用支付，在支付过程中因您自身原因或第三方支付平台原因造成的异常使其帐号无法正常使用或遭受损失的，领途网对此概不负责；</view>
-            <view class="weui-article__p">（5）本公司不行使、未能及时行使或者未充分行使本协议或者按照法律规定所享有的权利，不应被视为放弃该权利，也不影响本公司在将来行使该权利；</view>
-            <view class="weui-article__p">（6）本协议根据现行中华人民共和国法律法规制定。如发生协议条款与中华人民共和国法律法规相抵触时，则这些条款将完全按法律法规的规定重新解释，但本协议的其它条款仍对领途网和用户具有法律约束力。</view>
-            <view class="weui-article__p">（7）因本协议而发生的任何争议，您和领途网首先应友好协商解决。协商不成的，双方均一致同意将相关争议提交本协议签订地(即中国江苏省常州市天宁区)有管辖权的人民法院管辖。</view>
+            <view class="weui-article__p">领途网有随时调整各项服务费用收取标准的权利(已完成支付的订单不受影响)；</view>
+            <view class="weui-article__p">由于考试大纲变化、师资变动等原因，领途网有调整培训内容、授课老师的权利；</view>
+            <view class="weui-article__p">基于实际情况变化，领途网有调整课程设置的权利，也有调整服务提供流程的权利(包括但不限于退课、换课、赠课流程等)；</view>
+            <view class="weui-article__p">若您选择第三方支付平台等方式进行费用支付，在支付过程中因您自身原因或第三方支付平台原因造成的异常使其帐号无法正常使用或遭受损失的，领途网对此概不负责；</view>
+            <view class="weui-article__p">本公司不行使、未能及时行使或者未充分行使本协议或者按照法律规定所享有的权利，不应被视为放弃该权利，也不影响本公司在将来行使该权利；</view>
+            <view class="weui-article__p">本协议根据现行中华人民共和国法律法规制定。如发生协议条款与中华人民共和国法律法规相抵触时，则这些条款将完全按法律法规的规定重新解释，但本协议的其它条款仍对领途网和用户具有法律约束力。</view>
+            <view class="weui-article__p">因本协议而发生的任何争议，您和领途网首先应友好协商解决。协商不成的，双方均一致同意将相关争议提交本协议签订地(即中国江苏省常州市天宁区)有管辖权的人民法院管辖。</view>
         </view>
     </view>
 </view>
