--- a/wxApp/components/img.wxss
+++ b/wxApp/components/img.wxss
@@ -1,8 +1,22 @@
 @import "../app.wxss";
 
-.img{
+.img-view{
+    position: relative;
+}
+
+.img-box{
     width: 100%;
     height: 0;
     background-repeat:no-repeat;
     background-size:100%;
+}
+
+.img {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
 }
