--- a/wxApp/pages/common/footer.wxml
+++ b/wxApp/pages/common/footer.wxml
@@ -1,6 +1,6 @@
 <view class="weui-footer" style="margin-top:30rpx;">
     <view class="weui-footer__text">
-        <view>领途全真模考系统版权所有 | 苏ICP备201707030号</view>
+        <view>领途易考 版权所有 | 苏ICP备201707030号</view>
         <view>服务热线: 0519-85850880</view>
     </view>
 </view>
