--- a/wxApp/pages/common/concat.wxml
+++ b/wxApp/pages/common/concat.wxml
@@ -11,7 +11,7 @@
             客服座机：<view class="weui-agree__link" bindtap="call" data-phone="0519—89591580">0519—89591580</view>
         </view>
         <view class="weui-article__p">
-            领图职业司机公众号：
+            领图易考公众号：
         </view>
         <image src="{{domain}}static/mpQrCode.png" data-url="{{domain}}static/mpQrCode.png" class="logo block-auto" bindtouchstart="preview"> </image>
 
