--- a/wxApp/components/question/list.wxml
+++ b/wxApp/components/question/list.wxml
@@ -5,7 +5,7 @@
     <view class="body">
         <view class="header">第{{offset}}题</view>
 
-        <info question="{{question}}" />
+        <info question="{{question}}" bindAfterAnswer="afterAnswer" />
 
         <view class="actions weui-flex">
             <view class="weui-flex__item-auto prev" bindtap="prev">
