--- a/wxApp/pages/user/user.wxml
+++ b/wxApp/pages/user/user.wxml
@@ -9,14 +9,14 @@
     <block wx:if="{{user.avatar}}">
         <view class="weui-cells__title">常用</view>
         <view class="weui-cells weui-cells_after-title">
-            <view bindtap="picker" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-                <view class="weui-cell__bd"><span class="myIcon margin-r2 text-orange icon-list" />我的分类</view>
-                <view class="weui-cell__ft weui-cell__ft_in-access">{{user.tName == '' ? "去选择" : user.tName}}</view>
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <picker class="weui-cell__bd"  bindchange="changeType" range="{{typesData}}" range-key="name" value="{{pickerValue}}"><span class="myIcon margin-r2 text-orange icon-list" />我的分类</picker>
+                <picker class="weui-cell__ft weui-cell__ft_in-access"  bindchange="changeType" range="{{typesData}}" range-key="name" value="{{pickerValue}}">{{user.tName == '' ? "去选择" : user.tName}}</picker>
             </view>
 
             <view bindtap="order" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__bd"><span class="myIcon margin-r2 text-orange icon-orders" />我的订单</view>
-                <view class="weui-cell__ft weui-cell__ft_in-access" />
+                <view class="weui-cell__ft weui-cell__ft_in-access" >123</view>
             </view>
 
             <view bindtap="record" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
@@ -25,7 +25,7 @@
             </view>
 
             <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-                <picker class="weui-cell__bd" range="{{qTypes}}" range-key="name" bindchange="train"><span class="myIcon margin-r2 text-orange icon-train" />一键练习</picker>
+                <picker class="weui-cell__bd" range="{{typesData[pickerValue].child}}" range-key="name" bindchange="train"><span class="myIcon margin-r2 text-orange icon-train" />一键练习</picker>
                 <view class="weui-cell__ft weui-cell__ft_in-access" />
             </view>
 
